[package]
name = "wimp"
version = "0.1.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2018"
description = "Where Is My Pointer?"
repository = "https://github.com/yshui/wimp"
license = "GPL-3.0"

[build-dependencies]
shaderc = "0.6.2"
anyhow = "1.0.32"

[dependencies]
x11rb = { version = "0.6.0", features = [ "randr", "shape" ] }
anyhow = "1.0.32"
wgpu = {  version = "0.6.0" }
log = "0.4.11"
env_logger = "0.7.1"
xcb = "0.9.0"
raw-window-handle = "0.3.3"
async-std = { version = "1.6.5", features = [ "attributes", "unstable" ] }
async-macros = "2.0.0"
byteorder = "1.3.4"
tracing = { version = "0.1", features = ["log"] }
gfx-backend-vulkan = { version = "0.6.3", features = [ "xcb" ] }
